--- a/src/styles/welcomePage.css
+++ b/src/styles/welcomePage.css
@@ -1,8 +1,15 @@
 .my-content {
-    width: 100%;
-    height: 100vh; /* Adjust the height to fill the remaining space */
+    position: relative;
+    top: 83px;
+    width: '-webkit-fill-available';
     background: linear-gradient(180deg, #1A1A1B 0%, #323233 47.92%, #6A6A6B 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 10px;
   }
+
+
 
   .superscript {
     font-family: Superscript;
@@ -12,44 +19,77 @@
     letter-spacing: 0em;
     text-align: left;
     color: #FFFFFF;
-    opacity: 0.8;
   }
 
-  .footer-left-content {
-    width: 741px;
-    color: white;
-    display: block;
-    margin-left: 15%;
-    padding: 10px;
+
+
+
+  .dropdown-icon {
+    width: 49px;
+    height: 19px;
+    position: absolute;
+    right: 20%;
+    top: 30px;
+    border: 1px
   }
 
-  .other-footer-text {
+
+
+.welcome-text {
+font-family: Helvetica Neue;
+font-size: 46px;
+font-weight: 700;
+line-height: 56px;
+letter-spacing: 0em;
+text-align: center;
+color: #FFFFFF;
+display: flex;
+align-items: center;
+justify-content: center;
+padding-top: 140px;
+padding-bottom: 10px;
+  }
+
+
+  @media (max-width: 939px) {
+    .my-content{
+      padding-bottom: 10%;
+    }
+  }
+  
+
+
+  .content-text {
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 230px;
+    /* top: 1193px;
+    left: 194px; */
+    color: #FFFFFF;
+    text-align: center;
+  }
+
+
+  .below-welcome-text {
     font-family: Helvetica Neue;
-    font-size: 12px;
+    font-size: 25px;
     font-weight: 700;
-    line-height: 15px;
+    line-height: 30.2px;
     letter-spacing: 0em;
-    text-align: left;
-  }
+    text-align: center;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+      }
 
-  .first-footer-line {
-    font-family: Helvetica Neue;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 0em;
-    text-align: left;
-    opacity: 0.8;
-  }
 
-  .footer-right-content {
-    color: white;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-  }
+ 
+      .row {
+        --bs-gutter-x: 0;
+    }
 
-  .footer-emergent-logo{
-   font-size: 24px;
-  }
+    .main-container {
+    
+      background: linear-gradient(180deg, #1A1A1B 0%, #323233 47.92%, #6A6A6B 100%);
+    }
